tests/sumo/basic/person/errors/testsuite.sumo
# handle invalid input without crashing
# 
invalid_busstop
duplicate_id

# Copy of duplicate_id
duplicate_container_id

# test riding a car where the from edge has access to the prior destinationStop
trainStop_car_disconnected

# person starting in a vehicle with ride attribute from
person_triggered_invalidFrom

# warning only
unsuitable_vclass
